--- a/animation-activity/activity.css
+++ b/animation-activity/activity.css
@@ -28,16 +28,23 @@ nav {
 }
 
 @keyframes top {
-  from {}
-  to {}
+  from  {top: 0em;}
+  to  {
+    rotate: 45deg;
+    
+    }
 }
 
 @keyframes middle {
-  from {}
-  to {}
+  from {width: 100px;}
+  to {width: 0px;}
 }
 
 @keyframes bottom {
-  from {}
-  to {}
+  from  {}
+  to  {rotate: -45deg;
+    
+  }
 }
+
+
